--- a/reference.html
+++ b/reference.html
@@ -18,13 +18,13 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/reference.html">
+    <meta property="og:site_name" content="https://portfolio.iamkamalraj/reference.html">
     <meta property="og:title" content="Kamal Raj | reference">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/reference.html">
+    <meta property="og:url" content="https://portfolio.iamkamalraj/reference.html">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/reference.html">
+    <meta name="twitter:site" content="https://portfolio.iamkamalraj/reference.html">
 
     <meta name="application-name" content="Kamal Raj | reference" />
     <meta name="apple-mobile-web-app-title" content="Kamal Raj | reference" />
@@ -86,9 +86,9 @@
             <div class="px-3 pt-5">
                 <div class="row">
                     <div class="col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
-                        <h2 class="main-heading mb-0 head-upper reference_head">My <span class="reference_work">References</span></h2>
+                        <h2 class="main-heading mb-0 head-upper reference_head">Honours & <span class="reference_work">Awards</span></h2>
                         <p class="pre-heading p-upper font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                          I express my gratitude and love, as you have taken some minutes from your precious time to support my endeavors.
+                            My list of accolades and distinctions is a testament to my outstanding achievements.
                         </p>
                     </div>
 
@@ -100,7 +100,7 @@
              
               <div class="svg-animation-container">
                 <svg id="f2557a61-56ef-4ee7-9811-4cdcc73688e4" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="1121.80595" height="550" viewBox="0 0 1121.80595 699.0818">
-                <title>creative team</title>
+                <title>Graphic Design</title>
                 <circle cx="852.80585" cy="367.99943" r="253.9999" fill="#f2f2f2"/>
                
                 <circle cx="137.80597" cy="97.00003" r="97.00003" fill="#8A2BE2" class="circlemove"/>
