--- a/education.html
+++ b/education.html
@@ -271,12 +271,10 @@
 
 
     <!-- Education Section  -->
-    <section class="s2">
-        <div class="container-sm  edSection">
-            <div class="conatiner text-center mb-5">
-                <h1 class="head" data-aos="fade-up" data-aos-delay="300">Formal <span class="edu_background">Education</span></h1>
-            </div>
-            
+     <div class="main1 pt-1">
+            <h4 class="text-center heading1 exp-head" data-aos="fade-up" data-aos-delay="150" >Formal <span class="edu_background">Education</span></h4>
+    </div>
+        
     </section>
 
     <!--Education Timeline-->
