--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@ add
                 <div class="row">
 
                     <div class="col-md-6 godown">
-                        <svg xmlns="http://www.w3.org/2000/svg" id="ku" width="90%" baseProfile="tiny" class="svgmate" version="1" viewBox="300 150 550 570">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="ku" width="90%" baseProfile="tiny" class="svgmate" version="1" viewBox="300 150 550 570" style="margin-top: 60px;">
 
                 <g id="wall">
                   <path fill="#bb86fc" d="M674 333c0 2-2 4-4 4H553c-2 0-4-2-4-4V203c0-2 2-4 4-4h117c2 0 4 2 4 4v130z">
