--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     attaining excellent standards while meeting organizational needs.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.iamkamalraj/">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.iamkamalraj/">
+    <meta name="behance:card" content="summary">
+    <meta name="behance:site" content="https://portfolio.iamkamalraj/">
     <meta name="application-name" content="Kamal Raj | Home" />
     <meta name="apple-mobile-web-app-title" content="Kamal Raj | Home" />
     <meta name="summary" content="Seeking internship in a fast growing organization so as to hone my technical skills and
