--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Kamal Raj | Home</title>
+    <title>Kamal Raj P | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://portfolio.iamkamalraj/">
     <meta name="behance:card" content="summary">
     <meta name="behance:site" content="https://portfolio.iamkamalraj/">
-    <meta name="application-name" content="Kamal Raj | Home" />
+    <meta name="application-name" content="Kamal Raj P | Home" />
     <meta name="apple-mobile-web-app-title" content="Kamal Raj | Home" />
     <meta name="summary" content="Seeking internship in a fast growing organization so as to hone my technical skills and
     attaining excellent standards while meeting organizational needs." />
@@ -77,7 +77,7 @@
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Designing, UI/UX, Blockchain, Web Development, Open Source"></span>
+                    data-words="Designing, UI/UX, Web Development, Open Source"></span>
                 </span>
                 <div>
                     <div class="social-icons">
@@ -96,7 +96,7 @@
                 target="_blank"
                 rel="author"
               >
-                <!-- SVG code for behance icon -->
+                <!-- SVG code for behance iconss -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
