--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 target="_blank"
                 rel="author"
               >
-                <!-- SVG code for behance iconss -->
+                <!-- SVG code for behancee iconss -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -130,6 +130,7 @@
                                 <path id="arm" d="M125.2,213.4c-13.9,7.8-31.5,2.8-39.3-11.2c-4.3-7.7-12-12.8-20.7-13.8c-11.2,0-4.6,6.4,0,9.4
                                                             c6,5.1,10.8,11.5,13.8,18.8c2.9,7.4,7.7,24.1,41.5,17.8" />
                             </svg>
+                            
                         </a>
 
                      
