--- a/projects.html
+++ b/projects.html
@@ -299,7 +299,7 @@ add
                     <div class="dropdown col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="main-heading mb-0 projects_head">My <span class="my_projects">Projects</span></h2>
                         <p class="pre-heading font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                            My projects makes use of Java and vast variety of latest technology tools. In addition to my technical skills,i have a keen interest in UI/UX, Graphics design and have experience in creating visually appealing graphic design. I am proficient in industry-standard design tools like Adobe Photoshop.
+                            My projects makes use of vast variety of latest technology tools. I have a keen interest in Product design and have experience in creating visually appealing graphic design.
                         </p>
                     </div>
                 </div>
